# SELFIDX

./: .gitignore  .selfidx.md  CHANGES.md  Cargo.toml  ESTADO_TECNICO.md  MULTI_API.md  PERMISOS.md  QWEN.md  README.md  TUI_MOUSE_SUPPORT.md  UI_MEJORAS.md
docs/: OLLAMA_CONTEXT_OPTIMIZATION.md
logs/: session_20260326_075000.md
scripts/: INSTALLATION.md  build-all.bat  build-bundle.bat  build-installer.bat  install-simple.bat  install.bat  installer.iss  uninstall.bat
src/: autonomous.rs  config.rs  lib.rs  main.rs  main.rs.backup  project.rs
src/agent/: mod.rs
src/git/: mod.rs
src/llm/: mod.rs  providers.rs
src/ollama/: mod.rs
src/permissions/: classifier.rs  mod.rs  mode.rs  rules.rs  storage.rs
src/shell/: mod.rs
src/tasks/: mod.rs
src/terminal/: capsule.rs  history_search.rs  mod.rs  tui.rs  tui_enhanced.rs
src/utils/: hardware.rs  mod.rs
