[package]
name = "selfidx"
version = "3.0.0"
edition = "2021"
description = "Terminal integrada con vLLM - SELFIDEX v3.0"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-stream = "0.1"

# HTTP Client (vLLM)
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI
crossterm = "0.28"
ratatui = "0.24"

# File operations
fs4 = "0.8"
notify = "6"

# PTY (PowerShell)
portable-pty = "0.8"

# Utils
url = "2"
humantime = "2"
dirs = "5"
chrono = "0.4"

[package.metadata.bundle]
name = "SELFIDEX"
identifier = "com.selfidx.selfidx"
version = "3.0.0"
description = "Terminal integrada con Jan.ai - SELFIDEX v3.0"
copyright = "Copyright (c) 2024 SELFIDEX"
category = "DeveloperTool"
short_description = "Terminal con capacidades de IA"
long_description = """
SELFIDEX v3.0 es una terminal integrada con capacidades de IA.
Características:
- Terminal PowerShell nativa
- Chat AI con Jan.ai
- Agente de programación autónomo
- Navegación y edición de archivos
- Detección de hardware
"""
